<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>yangkit-parent</artifactId>
        <groupId>io.github.yang-central.yangkit</groupId>
        <version>1.5.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>yangkit-data-json-codec</artifactId>
    <name>yangkit-data-json-codec</name>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>io.github.yang-central.yangkit</groupId>
            <artifactId>yangkit-data-api</artifactId>
            <version>${io.github.yang-central.yangkit.yangkit-data-api.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.2</version>
        </dependency>
        <dependency>
            <groupId>io.github.yang-central.yangkit</groupId>
            <artifactId>yangkit-data-impl</artifactId>
            <version>${io.github.yang-central.yangkit.yangkit-data-impl.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.yang-central.yangkit</groupId>
            <artifactId>yangkit-parser</artifactId>
            <version>${io.github.yang-central.yangkit.yangkit-parser.version}</version>
        </dependency>
    </dependencies>

</project>